[cs-ui] - Safari fix - CSInputFile - Tooltip text extremely blurry

--- a/cs-ui-components/src/sass/components/_cs-tooltip.scss
+++ b/cs-ui-components/src/sass/components/_cs-tooltip.scss
@@ -15,6 +15,7 @@
 	min-height: 2rem;
 	padding: 0.5rem 0.75rem;
 	position: fixed;
+	transform: translate3d(0, 0, 0); // Fix safari text blur
 	transition: 0.25s;
 	z-index: var(--z-index-tooltip);
 	outline: 0;
